--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jest"
   ],
   "author": "Darby Ross",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
