--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "server-master-ts",
   "version": "0.1.0",
   "description": "Template for setting up Node server using Typescript, Express, nodemon",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest",
-    "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "start": "node dist/app.js",
+    "dev": "nodemon src/app.ts",
     "build": "tsc -p .",
     "format": "prettier . --write",
     "eslint:fix": "eslint --fix",
